# BotCraft-Worker

./: CMakeLists.txt  Containerfile  README.md
.github/workflows/: build.yml
src/: ChatClient.cpp  SocketConnection.cpp  SocketPacket.cpp  WorkerEntrypoint.cpp  main.cpp
src/botcraft-worker/: AtomicQueue.hpp  ChatClient.hpp  SocketConnection.hpp  SocketPacket.hpp
